added tags (not done)

--- a/_posts/2016-10-10-wtf.md
+++ b/_posts/2016-10-10-wtf.md
@@ -6,5 +6,6 @@ author: genIgnorance
 src: https://www.privateinternetaccess.com/blog/2016/10/uk-running-blog-https-now-act-terrorism-says-scotland-yard/
 srcshort: https://www.privateinternetaccess.com/
 tag: reaction
+rekt: 10
 ---
 <blockquote>In a bizarre case, Scotland Yard is accusing a person for six separate acts of preparing terrorism. Those six acts include researching encryption, developing an “encrypted version” of his blog, and instructing others how to use encryption.</blockquote><center><img src="/static/img/wtf.gif"></center><p>
